# operational-space-control

./: .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  bazel-bin  bazel-operational-space-control  bazel-out  bazel-testlogs  equality_constraint_function.cc  equality_constraint_function.h  requirements_lock.txt
config/unitree_go2/: BUILD.bazel  unitree_go2_config.yaml  unitree_go2_config_fixed.yaml
config/walter_sr/: walter_sr_config.yaml
config/walter_sr_wheels/: BUILD.bazel
debug/: autogen.py  func_ptr.cc
env/: pyvenv.cfg
examples/: BUILD.bazel  main.cc  push_up.cc  standing.cc  walter_sr_knee_tumbling.cc  walter_sr_pd_stairclimbing.cc  walter_sr_pd_tumbling.cc  walter_sr_slow_tumbling_with_bodytargets.cc  walter_sr_stair_climbing.cc  walter_sr_standing.cc  walter_sr_true_mjjoint_light_stairclimbing.cc  walter_sr_true_shin_tumble_air_mjjoint.cc  walter_sr_true_stairclimbing_mjjoint.cc  walter_sr_true_tumbling.cc  walter_sr_true_tumbling_mjjoint.cc  walter_sr_true_tumbling_mjjoint_light.cc  walter_sr_true_tumbling_wheellocked.cc  walter_sr_tumbling.cc  walter_sr_tumbling_body_targets.cc
models/unitree_go2/: BUILD.bazel  go2_mjx_fixed.xml  go2_mjx_osc.xml  go2_osc.xml  scene_mjx_fixed.xml  scene_osc.xml
operational-space-control/: BUILD.bazel
operational-space-control/tests/: BUILD.bazel  osc_test.cc
operational-space-control/unitree_go2/: BUILD.bazel  aliases.h  constants.h  containers.h  operational_space_controller.h  utilities.h
operational-space-control/unitree_go2/autogen/: BUILD.bazel  autogen.py
operational-space-control/walter_sr/: operational_space_controller.h
operational-space-control/walter_sr/autogen/: autogen.py
operational-space-control/walter_sr_wheels/: BUILD.bazel  aliases.h  constants.h  containers.h  operational_space_controller.h  utilities.h
operational-space-control/walter_sr_wheels/autogen/: BUILD.bazel  autogen.py
src/: BUILD.bazel  eigen_test.cc  main.cc  utilities.h
src/tests/: BUILD.bazel  osc_test.cc  sparse_test.cc  util_test.cc
src/unitree_go2/: A_matrix.csv  A_matrix_dense.csv  A_matrix_sparse.csv  BUILD.bazel  b_matrix.csv  casadi_A_test.cc  casadi_b_test.cc  casadi_test.cc  operational_space_controller.h  operational_space_controller_.h  test.cc  utilities.h  utilities_old.h
src/unitree_go2/autogen/: BUILD.bazel  autogen.py  equality_constraint_function.cc  equality_constraint_function.h
src/unitree_go2/test/: comparison_test.cc  simulation_test.cc
