load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    data = ["@mujoco-models//:unitree_go2"],
    deps = [
        "//operational-space-control/unitree_go2:operational_space_controller",
        "//operational-space-control/unitree_go2:aliases",
        "//operational-space-control/unitree_go2:constants",
        "//operational-space-control/unitree_go2:containers",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ]
)
