load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "standing",
    srcs = ["standing.cc"],
    data = ["@mujoco-models//:unitree_go2"],
    deps = [
        "//operational-space-control/unitree_go2:operational_space_controller",
        "//operational-space-control/unitree_go2:aliases",
        "//operational-space-control/unitree_go2:constants",
        "//operational-space-control/unitree_go2:containers",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_binary(
    name = "push_up",
    srcs = ["push_up.cc"],
    data = ["@mujoco-models//:unitree_go2"],
    deps = [
        "//operational-space-control/unitree_go2:operational_space_controller",
        "//operational-space-control/unitree_go2:aliases",
        "//operational-space-control/unitree_go2:constants",
        "//operational-space-control/unitree_go2:containers",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_binary(
    name = "walter_sr_standing",
    srcs = ["walter_sr_standing.cc"],
    data = ["@mujoco-models//:walter_sr"],
    deps = [
        "//operational-space-control/walter_sr:operational_space_controller",
        "//operational-space-control/walter_sr:aliases",
        "//operational-space-control/walter_sr:constants",
        "//operational-space-control/walter_sr:containers",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_binary(
    name = "walter_sr_tumbling",
    srcs = ["walter_sr_tumbling.cc"],
    data = ["@mujoco-models//:walter_sr"],
    deps = [
        "//operational-space-control/walter_sr:operational_space_controller",
        "//operational-space-control/walter_sr:aliases",
        "//operational-space-control/walter_sr:constants",
        "//operational-space-control/walter_sr:containers",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_binary(
    name = "walter_sr_knee_tumbling",
    srcs = ["walter_sr_knee_tumbling.cc"],
    data = ["@mujoco-models//:walter_sr"],
    deps = [
        "//operational-space-control/walter_sr:operational_space_controller",
        "//operational-space-control/walter_sr:aliases",
        "//operational-space-control/walter_sr:constants",
        "//operational-space-control/walter_sr:containers",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_binary(
    name = "walter_sr_true_tumbling",
    srcs = ["walter_sr_true_tumbling.cc"],
    data = ["@mujoco-models//:walter_sr"],
    deps = [
        "//operational-space-control/walter_sr:operational_space_controller",
        "//operational-space-control/walter_sr:aliases",
        "//operational-space-control/walter_sr:constants",
        "//operational-space-control/walter_sr:containers",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_binary(
    name = "walter_sr_stair_climbing",
    srcs = ["walter_sr_stair_climbing.cc"],
    data = ["@mujoco-models//:walter_sr"],
    deps = [
        "//operational-space-control/walter_sr:operational_space_controller",
        "//operational-space-control/walter_sr:aliases",
        "//operational-space-control/walter_sr:constants",
        "//operational-space-control/walter_sr:containers",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_binary(
    name = "walter_sr_tumbling_body_targets",
    srcs = ["walter_sr_tumbling_body_targets.cc"],
    data = ["@mujoco-models//:walter_sr"],
    deps = [
        "//operational-space-control/walter_sr:operational_space_controller",
        "//operational-space-control/walter_sr:aliases",
        "//operational-space-control/walter_sr:constants",
        "//operational-space-control/walter_sr:containers",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_binary(
    name = "walter_sr_slow_tumbling_with_bodytargets",
    srcs = ["walter_sr_slow_tumbling_with_bodytargets.cc"],
    data = ["@mujoco-models//:walter_sr"],
    deps = [
        "//operational-space-control/walter_sr:operational_space_controller",
        "//operational-space-control/walter_sr:aliases",
        "//operational-space-control/walter_sr:constants",
        "//operational-space-control/walter_sr:containers",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_binary(
    name = "walter_sr_true_tumbling_wheellocked",
    srcs = ["walter_sr_true_tumbling_wheellocked.cc"],
    data = ["@mujoco-models//:walter_sr_wheels"],
    deps = [
        "//operational-space-control/walter_sr_wheels:operational_space_controller",
        "//operational-space-control/walter_sr_wheels:aliases",
        "//operational-space-control/walter_sr_wheels:constants",
        "//operational-space-control/walter_sr_wheels:containers",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_binary(
    name = "walter_sr_true_tumbling_mjjoint",
    srcs = ["walter_sr_true_tumbling_mjjoint.cc"],
    data = ["@mujoco-models//:walter_sr"],
    deps = [
        "//operational-space-control/walter_sr:operational_space_controller",
        "//operational-space-control/walter_sr:aliases",
        "//operational-space-control/walter_sr:constants",
        "//operational-space-control/walter_sr:containers",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_binary(
    name = "walter_sr_true_stairclimbing_mjjoint",
    srcs = ["walter_sr_true_stairclimbing_mjjoint.cc"],
    data = ["@mujoco-models//:walter_sr"],
    deps = [
        "//operational-space-control/walter_sr:operational_space_controller",
        "//operational-space-control/walter_sr:aliases",
        "//operational-space-control/walter_sr:constants",
        "//operational-space-control/walter_sr:containers",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_binary(
    name = "walter_sr_true_tumbling_mjjoint_light",
    srcs = ["walter_sr_true_tumbling_mjjoint_light.cc"],
    data = ["@mujoco-models//:walter_sr"],
    deps = [
        "//operational-space-control/walter_sr:operational_space_controller",
        "//operational-space-control/walter_sr:aliases",
        "//operational-space-control/walter_sr:constants",
        "//operational-space-control/walter_sr:containers",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)


cc_binary(
    name = "walter_sr_true_shin_tumble_air_mjjoint",
    srcs = ["walter_sr_true_shin_tumble_air_mjjoint.cc"],
    data = ["@mujoco-models//:walter_sr"],
    deps = [
        "//operational-space-control/walter_sr:operational_space_controller",
        "//operational-space-control/walter_sr:aliases",
        "//operational-space-control/walter_sr:constants",
        "//operational-space-control/walter_sr:containers",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)

cc_binary(
    name = "walter_sr_true_mjjoint_light_stairclimbing",
    srcs = ["walter_sr_true_mjjoint_light_stairclimbing.cc"],
    data = ["@mujoco-models//:walter_sr"],
    deps = [
        "//operational-space-control/walter_sr:operational_space_controller",
        "//operational-space-control/walter_sr:aliases",
        "//operational-space-control/walter_sr:constants",
        "//operational-space-control/walter_sr:containers",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
        "@rules_cc//cc/runfiles:runfiles",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)