package(default_visibility = ["//visibility:public"])

cc_library(
    name = "utilities",
    srcs = ["utilities.h"],
    deps = [
        "@eigen//:eigen",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    data = ["//models/unitree_go2:unitree_go2"],
    deps = [
        "@mujoco-bazel//:mujoco",
        "@glfw-bazel//:glfw",
        "@eigen//:eigen",
    ],
    visibility = ["//visibility:public"],
)