load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "operational_space_controller",
    srcs = ["operational_space_controller.h"],
    deps = [
        ":utilities",
        "//operational-space-control:utilities",
        "//operational-space-control/unitree_go2/autogen:autogen_functions_cc",
        "//operational-space-control/unitree_go2/autogen:autogen_defines_cc",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@osqp-cpp//:osqp++",
        "@osqp//:osqp",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/status:status",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "utilities",
    srcs = ["utilities.h"],
    deps = [
        "@eigen//:eigen",
    ],
    visibility = ["//visibility:public"],
)
