cc_binary(
    name = "util_test",
    srcs = ["util_test.cc"],
    deps = [
        "//src:utilities",
        "//src/unitree_go2:utilities",
        "//src/unitree_go2/autogen:autogen_functions_cc",
        "//src/unitree_go2/autogen:autogen_defines_cc",
        "@eigen//:eigen",
    ],
    visibility = ["//visibility:public"],
)