cc_binary(
    name = "util_test",
    srcs = ["util_test.cc"],
    deps = [
        "//src:utilities",
        "//src/unitree_go2:utilities",
        "//src/unitree_go2/autogen:autogen_functions_cc",
        "//src/unitree_go2/autogen:autogen_defines_cc",
        "@eigen//:eigen",
    ],
    visibility = ["//visibility:public"],
)


cc_binary(
    name = "osc_test",
    srcs = ["osc_test.cc"],
    data = ["//models/unitree_go2:unitree_go2"],
    deps = [
        "//src/unitree_go2:operational_space_controller",
        "//src/unitree_go2/autogen:autogen_defines_cc",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
    ]
)