cc_library(
    name = "operational-space-controller",
    srcs = ["operational_space_controller.h"],
    deps = [
        "//src:utilities",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
    ],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "comparison_test",
    srcs = ["comparison_test.cc"],
    data = ["//models/unitree_go2:unitree_go2"],
    deps = [
        "//src:utilities",
        ":operational-space-controller",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "simulation_test",
    srcs = ["simulation_test.cc"],
    data = ["//models/unitree_go2:unitree_go2"],
    deps = [
        "//src:utilities",
        ":operational-space-controller",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
        "@glfw-bazel//:glfw",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "casadi_b_test",
    srcs = ["casadi_b_test.cc"],
    data = ["//models/unitree_go2:unitree_go2"],
    deps = [
        "//src/unitree_go2/autogen:autogen_cc",
        "//src:utilities",
        ":operational-space-controller",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
    ],
)

cc_binary(
    name = "casadi_A_test",
    srcs = ["casadi_A_test.cc"],
    data = ["//models/unitree_go2:unitree_go2"],
    deps = [
        "//src/unitree_go2/autogen:autogen_cc",
        "//src:utilities",
        ":operational-space-controller",
        "@mujoco-bazel//:mujoco",
        "@eigen//:eigen",
    ],
)